package Shared;

import Shared.SimTime;

public interface Module {
	void updateTime(SimTime time);
}
